Dec 01 2002  2.7.1  Internal modifications to the frontend power display
                    Tweaked byte count details
                    Updated turbocell code
Nov 30 2002  2.7.1  Fixed kismet_hopper for cisco_cvs
Nov 29 2002  2.7.1  Changed client back to only updating once per second - 
                     massive speed improvements.
                    Fixed handling of adhoc probe/ssids
                    Changed "Lucent Outdoor Router" to "Turbocell"
                    Added more complete turbocell dissection (Turbocell ID,
                     name, and mode extraction)
Nov 28 2002  2.7.1  Happy thanksgiving
                    Fixed tcpserver code for tracking the number of clients
                     using a protocol reference to actually have code, not
                     just a placeholder.
                    Sped up main filtering method
                    Added size column
                    Groups now aggregate data size
                    Profiling and speedboosts to kismet_client
Nov 27 2002  2.7.1  Updated kismet_hopper to work with the new source specs
Nov 26 2002  2.7.1  Removed user-specified capture engines.  They were 
                     redundant with the card type and led to misconfigurations.
                    Removed the linux-wireless generic capture engine entirely,
                     it was deprecrated and worthless.
Nov 25 2002  2.7.1  Enormous rewrite of the client-server protocol.  This will
                     have little impact on users of the builtin kismet
                     interfaces, but all external client authors should read
                     docs/DEVEL.client.  Also includes many fixes to the
                     server behavior and revamped commands.
                    Fixed reconnecting under new server code
                    Added build number to connect output
                    Changed 'tr' use in scripts to avoid errors with some 
                     busybox implementations